welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:16: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.LineByLine'
override def run() {
             ^